# projektwahl-wasm-webcomponents

./: README.md  flake.nix  index.html  result
projektwahl-server/: Cargo.toml  cert.pem  key.pem  nopass.pem
projektwahl-server/src/: main.rs
projektwahl-wasm/: Cargo.toml
projektwahl-wasm/src/: lib.rs
