[package]
name = "projektwahl-server"
version = "0.1.0"
authors = ["Hedtke, Moritz <Moritz.Hedtke@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
openssl = { version = "0.10" }
actix-files = "0.5"